# carve

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OSS_COMMITMENT.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/agents/: agent-author.md  agent-loop-reviewer.md  dbt-engineer.md  dbt-reviewer.md  dependency-checker.md  engineer.md  manual-tester.md  merge-resolver.md  python-engineer.md  python-reviewer.md  qa-verifier.md  security-reviewer.md  snowflake-engineer.md  spec-keeper.md  task-planner.md  web-engineer.md
.claude/hooks/: check-no-version-vocab.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dco.yml  docs.yml
docs/: deploy-from-ci.md  deploy-roles.md  first-run-with-bundled-postgres.md  first-run-with-external-postgres.md  installation.md  mcp-server-troubleshooting.md  mcp-server.md  upgrade-from-walking-skeleton.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_pipeline_centric.py  0003_rename_apply_to_deploy.py  0004_build_entity.py  0005_runs_target.py  0006_recovery_chains.py  0007_workspaces.py  0008_runtime_queue.py  0009_runtime_schedules.py  0010_runtime_events.py  0011_runtime_archive.py  0012_observability_telemetry.py  0013_runtime_worker_placement.py  0014_rest_api_tables.py
specs/: ARCHITECTURE.md  DELIVERY.md  PRD.md  PROJECT_PLAN.md  README.md  use-cases.md
specs/_archive/: 01-followup-database-url-env-precedence.md  01-followup-m1-test-sweep.md  ARCHITECTURE-pre-2026-05-positioning.md  PROJECT_PLAN-pillars.md  README.md
specs/_strategy/: 2026-05-positioning.md  2026-06-ai-harness.md  2026-06-change-lifecycle.md  2026-06-control-plane.md  2026-06-hosted-ui-in-ai-client.md  2026-06-lean-plan-build.md  2026-06-spec-structure.md  control-plane-reference-model.md  spec-audit.md
specs/capabilities/: README.md  ask.md  connect.md  dbt-engineer.md  dbt-execution.md  deploy.md  dlt-engineer.md  extensibility.md  harness.md  init.md  layout.md  lineage.md  mcp-server.md  memory.md  model-auth.md  observability.md  packaging.md  pipelines.md  plan-build.md  recovery.md  reference-docs.md  rest-api.md  runtime.md  semantic-search.md  sql.md  state-store.md  ui.md
specs/milestone-1-walking-skeleton/: 01-cli-foundation.md  02-config-loader.md  03-state-store.md  04-anthropic-agent-loop.md  05-python-step-and-runner.md  06-snowflake-connector.md  README.md
specs/milestone-1.1-followups/: 01-init-config-templates.md  02-claude-code-oauth.md  03-dotenv-autoload.md  04-plan-progress-output.md  05-m1-agent-prompt-tightening.md  06-plan-build-run-separation.md  07-failed-apply-permits-retry.md  README.md
specs/milestone-2-real-product/: 01-plan-apply-workflow.md  01-plan-deploy-workflow.md  02-orchestration-agent.md  03-dbt-agent.md  04-dbt-agent.md  04-snowflake-agent.md  05-dbt-integration.md  05-snowflake-agent.md  06-brownfield-onboarding.md  07-brownfield-onboarding.md  07-convention-inference.md  08-convention-inference.md  08-schema-retrieval.md  09-fastapi-server.md  10-fastapi-server.md  10-websocket-streaming.md  11-web-ui-workbench.md  12-web-ui-pipeline-monitor.md  12-web-ui-workbench.md  13-github-pr-integration.md  14-recovery-agent.md  15-recovery-agent.md  README.md  _spec_update_proposal_M2-01.md  _spec_update_proposal_M2-02.md  _spec_update_proposal_M2-07.md  _spec_update_proposal_M2-10.md  _spec_update_proposal_M2-14.md
specs/milestone-3-polish/: 01-multi-step-pipelines.md  02-sql-step-type.md  03-shell-http-steps.md  04-mcp-client.md  05-quality-agent.md  06-skills-sdk.md  08-embedding-search.md  09-web-ui-agent-studio.md  10-web-ui-dbt-run-view.md  11-example-projects.md  13-doctor-command.md  14-step-disable-enable.md  15-pipeline-lifecycle.md  README.md
specs/pillar-1-extract-load/: 01-target-system.md  02-plan-build-lifecycle.md  03-init-per-target-layout.md  04-extract-load-agent.md  04-per-target-dotenv.md  05-extract-load-agent.md  05-schema-retrieval.md  06-schema-retrieval.md  06-snowflake-ddl-for-el.md  07-el-run.md  07-snowflake-ddl-for-el.md  08-el-deploy.md  08-el-run.md  09-el-deploy.md  09-recovery-agent.md  10-recovery-agent.md  README.md  _followups.md
specs/pillar-1.1-flat-layout/: 01-flat-layout.md  03-templated-ddl-and-deploy.md  04-recovery-and-cicd-docs.md
specs/reference/: README.md  cli-reference.md  config-schema.md  glossary.md  (+1 more)
tests/: conftest.py  test_cli.py
(+586 files in other folders)
