[project]
name = "carve"
version = "0.0.1"
description = "AI-first data engineering framework. Carve structure from chaos."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Carve contributors" },
]
keywords = ["data-engineering", "dbt", "snowflake", "agents", "anthropic"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "alembic>=1.13",
    "anthropic>=0.34",
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "snowflake-connector-python>=3.7",
    "sqlglot>=25",
    "duckdb>=1.0",
    "dlt>=1.0",
    "cryptography>=42",
    "tomlkit>=0.13",
    "watchdog>=4.0",
    "croniter>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7",
    "sqlparse>=0.5",
    "testcontainers[postgres]>=4.0",
]
# Heavier adapter stack for the OPTIONAL real-dbt-against-DuckDB integration test
# (tests/core/dbt_execution/test_local_backend_real_dbt.py). Deliberately NOT in
# `dev`: contributors run the injected-engine unit tests offline; install this
# group only to exercise the real-dbt path. The test is importorskip-gated, so a
# plain `dev` install skips it cleanly.
dbt-test = [
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
]

[project.scripts]
carve = "carve.cli.main:app"

[project.urls]
Homepage = "https://github.com/carve-dev/carve"
Repository = "https://github.com/carve-dev/carve"
Issues = "https://github.com/carve-dev/carve/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carve"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# typer's idiomatic pattern is `arg: T = typer.Argument(...)` in the command
# signature. Flake8-bugbear B008 flags it; we intentionally accept the pattern
# in CLI command modules where typer drives the signature.
"src/carve/cli/commands/*.py" = ["B008"]
"src/carve/cli/commands/**/*.py" = ["B008"]
# Same rationale for the top-level callback in main.py.
"src/carve/cli/main.py" = ["B008"]

[tool.mypy]
strict = true
python_version = "3.11"

# `croniter` ships no type stubs and no `py.typed` marker. Scope the
# missing-stub allowance to that one module rather than blanket-disabling.
[[tool.mypy.overrides]]
module = ["croniter", "croniter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
